m7-solve the repeat problem about the input ID in HTML; solve the search z-index problem; delete the reset function that the user did the wrong password or email; change the sign-in and sign-up password input type; change the color of the sign-in alt; redesign the nav; redesign the journal selector icons; redesign the profile content

--- a/xinya.wang/css/app.css
+++ b/xinya.wang/css/app.css
@@ -60,6 +60,10 @@ ul{
     padding: 0;
 }
 
+.call-to-action-button{
+    font-weight: bold;
+    color: var(--color-blue);
+}
 
 /* Layout Classes */
 
@@ -144,6 +148,12 @@ ul{
 	padding: 1em; 
 	text-align: center; 
 	font-size: 0.8em;
+    color: var(--color-neutral-lighter);
+}
+
+.signin-alt a{
+    text-decoration: underline;
+    color: var(--color-neutral-lighter);
 }
 
 #signin-page [data-role='main'],
@@ -293,6 +303,7 @@ ul{
     /*background-color: red;*/
     left: 50%;
     transform: translateX(-50%);
+    z-index: 100;
 } 
 
 .search{
@@ -300,6 +311,7 @@ ul{
 	width: 14em;
 	height: 1.5em;
 	position: relative;
+    z-index: 100;
 }
 
 .search input{
@@ -328,7 +340,7 @@ ul{
 .recent-location{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 20%;
 }
 
 .recent-pin-item{
@@ -374,7 +386,7 @@ ul{
     font-size: 0.8em;
 }
 
-.list-select-holder{
+.nav-holder{
     position: relative;
     width: 100%;
     height: auto;
@@ -430,10 +442,12 @@ ul{
 	box-shadow: 0 0 5px rgba(0,0,0,0.15);
 	overflow: hidden;
 	position: relative;
+    font-family: var(--font-title);
 }
 
 .ui-footer{
      z-index: 99;
+     font-weight: 700;
 }
 
 .ui-header{
@@ -442,6 +456,7 @@ ul{
     background-color: rgba(0,0,0,0);
     box-shadow: 0 0 0 rgba(0,0,0,0);
     border-bottom: 1px solid var(--color-neutral-lighter);
+    font-weight: 400;
 }
 
 .ui-header .ui-title {
@@ -705,12 +720,6 @@ ul{
     background-size: cover;
 }*/
 
-#add-new-animal-record .body{
-    width: 100%;
-    height: 100%;
-    background: url(../img/cameraSelectFake.jpg) no-repeat;
-    background-size: cover;
-}   
 
 
 
@@ -816,6 +825,20 @@ ul{
     height: 1.5em;
 }
 
+.list-select-holder{
+    position: relative;
+    margin: 1em 0;
+    padding: 0 1em;
+    width: 100%;
+    height: 1.5em;
+}
+
+.list-select-button img{
+    width: 1.2em;
+    height: 1.2em;
+    margin-left: 1em; 
+}
+
 .list-photo i{
     position: absolute;
     width: 1em;
@@ -841,6 +864,16 @@ ul{
     width: 1em;
     height: 1em;
     background:url(../img/iconAnimalSelect.svg) no-repeat;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, calc(-50% + 0.2em));
+}
+
+.list-show i{
+    position: absolute;
+    width: 1em;
+    height: 1em;
+    background:url(../img/iconShowList.svg) no-repeat;
     top: 50%;
     left: 10%;
     transform: translate(-50%, calc(-50% + 0.2em));
@@ -1058,8 +1091,25 @@ footer ul{
 
 .nav-icon.add-location{
     line-height: var(--line-height);
-    font-size: 2.5em;
+    position: absolute;
+    right: 1em;
+    bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-color: var(--color-yellow);
+    box-shadow: 0 0 2px rgba(0,0,0,0.25);
+    border-radius: 1.5em;
 }
+
+.nav-icon.add-location img{
+    width: 0.8em;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
 
 .nav-in-header{
     width: 1em;
@@ -1294,6 +1344,10 @@ footer ul{
     padding: 0.5em;
     border-bottom: 1px solid var(--color-neutral-lighter);
 }
+.select-animal-item li:last-child{
+    border-bottom: 0px;
+    padding-bottom: 1em;
+}
 
 .select-animal-item img{
     width: 3em;
@@ -1379,19 +1433,48 @@ footer ul{
 
 .btn{
     width: 100%;
-    height: auto;
-    text-align: center;
-    margin: 2em 0;
-    color: var(--color-white);
-   
+    height: var(--header-height);
+    /*text-align: center;*/
+    /*margin: 2em 0;*/
+    /*color: var(--color-white);*/
     font-size: 0.8em;
+    position: relative;
 }
 
 .btn a{
+    padding: 0;
+}
+
+.btn p{
     padding: 0.5em 4em;
-    border: 1px solid ;
-     background-color: var(--color-yellow);
     border-radius: 1.5em;
+    margin-left: 0.9em;
+}
+
+.btn .nav-icon.add{
+    position: absolute;
+    left: 1em;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.nav-icon.add{
+    line-height: var(--line-height);
+    position: absolute;
+    width: 2em;
+    height: 2em;
+    border: 2px solid var(--color-yellow);
+    border-radius: 1.5em;
+    z-index: 100;
+}
+
+.nav-icon.add img{
+    width: 0.8em;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 
